patient API and models
